@@ -9,14 +9,12 @@ import org.realEstate.myRealEstateService.repository.ObjectFilesRepository;
 import org.realEstate.myRealEstateService.utils.File;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -35,8 +33,8 @@ public class ObjectService {
 
     private final File file;
 
-    private void saveFileInDB(UUID id, String name, String fileName, String originalFilename, String url) {
-        ObjectFilesEntity fileEntity = mapper.toEntity(id, name, fileName, originalFilename, url);
+    private void saveFileInDB(UUID id, String description, String fileName, String originalFilename, String url) {
+        ObjectFilesEntity fileEntity = mapper.toEntity(id, description, fileName, originalFilename, url);
         repository.save(fileEntity);
     }
 
@@ -44,7 +42,6 @@ public class ObjectService {
         try {
             if (fileName != null) {
                 file.deleteFile(Paths.get(UPLOAD_DIR, fileName));
-                ;
                 repository.findByFileName(fileName).ifPresent(repository::delete);
             }
         } catch (IOException e) {
@@ -53,59 +50,35 @@ public class ObjectService {
         }
     }
 
-    private String getNamee(String[] names, int counter) {
-        String name = null;
-        if (names != null && counter >= 0 && counter < names.length) {
-            name = (names[counter] != null)
-                    ? names[counter]
-                    : null;
-        }
-        return name;
-    }
-
-    private void uploadChecks(UUID id, ObjecFilesDto files) throws CustomException {
+    private void uploadChecks(UUID id, ObjecFilesDto file) throws CustomException {
         if (id == null)
             throw new CustomException("Object id is null");
 
-        if (files == null)
+        if (file == null)
             throw new CustomException("Files object is null");
 
-        if (files.getName() == null)
+
+        if (file.getDescription() == null)
             throw new CustomException("No file description is given in names");
 
-        if (files.getName().length != files.getFile().length)
-            throw new CustomException("Inconsistency in files and name parameters");
     }
 
-    public void uploadImages(UUID id, ObjecFilesDto files) throws CustomException {
+    public void uploadImages(UUID id, ObjecFilesDto uploadInfo) throws CustomException {
 
-        uploadChecks(id, files);
+        uploadChecks(id, uploadInfo);
 
-        List<String> fileNames = new ArrayList<>();
-        String fileName = "";
+        String fileName = null;
         try {
-            file.createDir(UPLOAD_DIR);
-            String[] names = files.getName();
-            int counter = 0;
-            for (MultipartFile file : files.getFile()) {
-                if (!file.isEmpty()) {
-                    // Validate File
-                    this.file.validateFile(file);
-                    // write in file-system
-                    fileName = this.file.getFilename(this.file.getFileExt(file));
-                    Path filePath = Paths.get(UPLOAD_DIR, fileName);
-                    InputStream dd = file.getInputStream();
-                    this.file.copyFile(file.getInputStream(), filePath);
-                    fileNames.add(fileName);
-                    // save in
-                    String name = getNamee(names, counter);
-                    saveFileInDB(id, name, fileName, file.getOriginalFilename(), URL);
-                }
-                counter++;
-            }
+            this.file.validateFile(uploadInfo.getFile());
+            Files.createDirectories(Path.of(UPLOAD_DIR));
+            fileName = this.file.getFilename(this.file.getFileExt(uploadInfo.getFile()));
+            Path filePath = Paths.get(UPLOAD_DIR, fileName);
+            InputStream inputstream = uploadInfo.getFile().getInputStream();
+            this.file.copyFile(inputstream, filePath);
+            saveFileInDB(id, uploadInfo.getDescription(), fileName, uploadInfo.getFile().getOriginalFilename(), URL);
         } catch (Exception e) {
             deleteFileFromDbAndFS(fileName);
-            throw new CustomException("Could not upload file: " + fileName + ",Error:" + e.getMessage());
+            throw new CustomException("Could not uploadInfo uploadInfo: " + fileName + ",Error:" + e.getMessage());
         }
     }
 }
